Fix overflow issues in small screens

--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@ main {
     width: 100%;
     height: 100%;
     background-color: #212529;
-    overflow-x: hidden;
-    overflow-y: hidden;
 }
 
 #drawer {
@@ -314,7 +312,7 @@ li {
 
 @media screen and (max-width: 400px) {
     .main-content h1 {
-        width: 300px;
+        width: 200px;
         font-size: 2.5em;
         margin: 0 0 0.4em 0;
     }
